# aiosaber-client

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
install/: linux-install.sh  linux-uninstall.sh  linux-update.sh  mac-install-oneclick.sh  mac-install.sh  mac-uninstall.sh  mac-update.sh  windows-install.bat  windows-uninstall.bat  windows-update.bat
install/utility/: LICENSE
src/: beatsaver.rs  config.rs  file_watcher.rs  http_client.rs  installer.rs  main.rs  map_index.rs  one_click.rs  queue_handler.rs  webserver.rs  websocket_handler.rs
